Fixed alignment of sidebar option icons.

--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -42,7 +42,7 @@
   flex-shrink: 0;
   justify-content: center;
   margin-right: 0.5rem;
-  width: 2rem;
+  width: 1.75rem;
 }
 
 .sidebar-option-prevent-click {
@@ -62,7 +62,7 @@
   display: flex;
   justify-content: center;
   margin-right: 0.5rem;
-  width: 2rem;
+  width: 1.75rem;
 }
 
 .sidebar-title:first-child {
